fix: app header container overflow on mobile

--- a/framework/core/less/common/App.less
+++ b/framework/core/less/common/App.less
@@ -190,6 +190,7 @@
   .App-header {
     .container {
       padding: 0;
+      width: 100%;
     }
   }
   .Header-navigation {
